# taberna

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: clang-lld.toolchain.cmake
data/cmp/: phase.py  wrap.py
docs/: mca-format-v2.md  segmentation-sota.md  surface-detection-kaggle.md  touching-sheets-plan.md  unwrapping-plan.md
gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  slice_view.cpp  slice_view.h  volume_source.cpp  volume_source.h  volume_view.cpp  volume_view.h
patches/: README.md
patches/vtk/: scn-libcxx-wrap_iter-base.patch
scripts/: apply_patches.sh  build_all.sh  build_qt.sh  build_vtk.sh  crawl_opendata.py  l5_occupancy.py  leak_metric.py  official_score.py  overlap_consistency.py  param_sweep.py  render_compare.py  render_merged.py  resume_taberna.sh  resume_vtk_taberna.sh  robustness_bench.py  s3_occupancy.py  tile_winding.py  tile_winding_mr.py  tune_region.py  unroll_pipeline.py
src/annotate/: CMakeLists.txt  point_collection.c  point_collection.h  umbilicus.c  umbilicus.h
src/common/: types.h
src/eval/: CMakeLists.txt  metrics.c  metrics.h  nsd.c  nsd.h  score.c  score.h  topo.c  topo.h
src/io/: CMakeLists.txt  mca.c  mca.h  mimalloc_tune.c  nrrd.c  nrrd.h  tiff_vol.c  tiff_vol.h
src/postproc/: CMakeLists.txt  morph.c  morph.h  sheet_repair.c  sheet_repair.h  topo_surgery.c  topo_surgery.h
src/segmentation/: CMakeLists.txt  affinity.c  affinity.h  ced.c  ced.h  hessian.c  hessian.h  partition.c  partition.h  ridge.c  ridge.h  sheet_tensor.c  sheet_tensor.h  snic.c  snic.h  stitch.c  stitch.h  trace.c  trace.h
src/topo/: CMakeLists.txt  cubical.c  cubical.h  persist0.c  persist0.h
src/unwrap/: CMakeLists.txt  deform.c  deform.h  spiral_fit.c  spiral_fit.h  winding_field.c  winding_field.h  wmetrics.c  wmetrics.h
tools/: CMakeLists.txt  affinity_seg.c  air_trace.c  eval_seg.c  extract_cube.c  mca_slice.c  nsd_native.c  pers_dump.c  polar_sheet.c  progressive_unroll.c  ridge_clean.c  ridge_connect.c  run_e1.c  run_pipeline.c  run_surface.c  sd_measure.c  sheet_detect.c  sheet_sep.c  sheet_sep3d.c  sheetscale.c  show_inconsistencies.c  snic_view.c  st_sweep.c  surf_pred.c  surface_ced.c  surface_clean.c  surface_connect.c  surface_hess.c  surface_multi.c  surface_opt.c  surface_optimize.c  surface_pipeline.c  surface_predict.c  surface_prep.c  surface_repair.c  surface_sweep.c  surface_trace.c  svaff_seg.c  test_features.c  test_persist0.c  (+17 more)
